# 2023-2-CENTAURI

./: .gitattributes  .gitignore  .gitmodules  2023-2-CENTAURI.code-workspace  404.html  Diagrama sem nome.drawio  README.md  VisaoDoProdutoEDoProjeto.md  fly.toml  index.html  mkdocs.yml  package-lock.json  package.json
Documento-de-Arquitetura-Centauri-MDS-2023.2/: index.html
Documento-de-escopo-do-Produto/: index.html
Visão-do-Produto-e-do-Projeto-Centauri-Versao-2/: index.html
back/: Cargo.toml
back-usuarios/: .env  Dockerfile  db.js  fly.toml  index.js  package-lock.json  package.json
backend-meili/: .dockerignore  .gitignore  MDS-Backend.code-workspace  fly.toml  search-index.js  src-files.js
backend-meili/Document_Parser/: Cargo.toml
backend-meili/Document_Parser/src/: main.rs
backend-meili/Server/: Cargo.toml
backend-meili/Server/src/: main.rs
backend-meili/Server/static/: index.html  script.js
docs/: Ata de reuniões - Centauri.docx  Diagrama sem nome.drawio  Documento de Arquitetura - Centauri - MDS-2023.2.md  Documento de Arquitetura - Centauri - MDS-2023.md  Documento de escopo do Produto.md  Documento-de-Arquitetura-Centauri-MDS-2023.2.md  Visão do Produto e do Projeto - Centauri Versao-2.md  Visão do Produto e do Projeto - Centauri.docx  atasReuniao.md  index.html  index.md
dump/: cadastro_routines.sql  cadastro_usuarios.sql  phpmyadmin_pma__bookmark.sql  phpmyadmin_pma__central_columns.sql  phpmyadmin_pma__column_info.sql  phpmyadmin_pma__designer_settings.sql  phpmyadmin_pma__export_templates.sql  phpmyadmin_pma__favorite.sql  (+15 more)
(+201 files in other folders)
