[package]
name = "document_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pdf-extract = "0.7.2"
encoding = "0.2.33"
serde = "1.0.188"
serde_derive = "1.0.188"
serde_json = "1.0.107"
chrono = "0.4.31"
sha2 = "0.10.8"
digest = "0.10.7"
fancy-regex = "0.11.0"
