[package]
name = "actix-server"
version = "0.9.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
actix-files = "0.6.2"
actix-rt = "2.9.0"
meilisearch-sdk = "0.24.1"
serde = "1.0.188"
serde_json = "1.0.105"
rayon = "1.8.0"
proptest = "1.3.1"

[target.'cfg(target_arch = "aarch64")'.dependencies]
openssl = { version = "0.10.57", features = ["vendored"] }
